# cryptopals

./: .cargo  .gitignore  Cargo.toml  requirements.txt
python3/: requirements.txt
rust/: Cargo.toml
rust/.cargo/: config
rust/src/: lib.rs
rust/src/ciphers/: caesar.rs  mod.rs
rust/src/ciphers/aes/: cbc.rs  ecb.rs  mod.rs
rust/src/ciphers/aes/tests/: cbc.rs  ecb.rs  mod.rs
rust/src/ciphers/xor/: mod.rs  repeating_bytes.rs  single_byte.rs
rust/src/crackers/: caesar.rs
rust/src/crackers/aes/: mod.rs  oracle_prefixing.rs
rust/src/crackers/xor/: repeating_bytes.rs  single_byte.rs
rust/src/detectors/aes/: ecb.rs
rust/src/detectors/xor/: repeating_bytes.rs  single_byte.rs
rust/src/oracles/aes/: mod.rs  random.rs
rust/src/oracles/aes/ecb/: mod.rs  prefixing.rs
rust/src/text_scoring/: common.rs
rust/src/utils/: hamming_distance.rs  hex_to_base64.rs  mod.rs  pad.rs  xor.rs
rust/tests/: tests.rs
rust/tests/misc/: caeser.rs  mod.rs
rust/tests/set01/: challenge01.rs  challenge02.rs  challenge03.rs  challenge04.rs  challenge05.rs  challenge06.rs  challenge07.rs  challenge08.rs  mod.rs
rust/tests/set02/: challenge09.rs  challenge10.rs  challenge11.rs  challenge12.rs  mod.rs
rust/tests/utils/: get_resources_folder.rs  mod.rs
set1/challenge1/: hex2base64
set1/challenge2/: xor
set1/challenge3/: find_1byte_xor_key
set1/challenge4/: find_1byte_xor_string
set1/challenge5/: repeating_xor_key
set1/challenge6/: find_repeating_xor_key
set1/challenge7/: decrypt_aes_ecb
set1/challenge8/: find_ecb_string
set2/challenge10/: decrypt_aes_cbc
(+75 files in other folders)
