[package]
name = "cryptopals"
version = "0.1.0"
authors = ["Paul Harrington <pallsjh@gmail.com>"]
edition = "2018"

repository = "https://github.com/ZeePal/cryptopals/"
publish = false


[dependencies]
hex = "0.4.2"
base64 = "0.12.1"
aesni = "0.6.0"
rand = "0.7.3"
regex = "1.3.9"
lazy_static = "1.4.0"
